--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,39 @@
-build/bin
-node_modules
-frontend/dist
+node_modules/
+package-lock.json
+npm-debug.log*
+yarn.lock
+pnpm-lock.yaml
+frontend/build/
+frontend/dist/
+frontend/wailsjs/go/
+frontend/wailsjs/runtime/
+build/
+build/bin/
+build/darwin/
+build/windows/
+build/appicon.png
+build/README.md
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.log
+*.cache
+*.tmp
+*.swp
+*.swo
+*.bak
+*.orig
+.DS_Store
+Thumbs.db
+*.exe
+*.dll
+*.out
+*.log
+*.swp
+*.swo
+*.bak
+*.orig
+*.test
+*.tmp
+cover.out
